apps/wiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki
  namespace: wiki
spec:
  selector:
    app: wiki
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
